# Maz_4133K_Locator

./: CMakeLists.txt  CMakePresets.json  Maz_Protei_locator.cpp  Maz_Protei_locator.h  Maz_Protei_locator_test.cpp  README.md  config.json
locator_service/: Locator.cpp  Locator.h
model/: Subscriber.cpp  Subscriber.h  SubscribersProximityTrigger.cpp  SubscribersProximityTrigger.h  Zone.cpp  Zone.h  ZoneTrigger.cpp  ZoneTrigger.h
